--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
 		"date-fns": "^3.6.0",
 		"dayjs": "^1.11.11",
 		"drizzle-orm": "^0.30.10",
-		"embla-carousel-react": "^8.1.3",
+		"embla-carousel": "^8.1.7",
+		"embla-carousel-autoplay": "^8.1.7",
+		"embla-carousel-react": "^8.1.7",
 		"input-otp": "^1.2.4",
 		"isbot": "^4.1.0",
 		"lucide-react": "^0.379.0",
@@ -64,6 +66,7 @@
 		"react-resizable-panels": "^2.0.19",
 		"remix-flat-routes": "^0.6.5",
 		"remix-themes": "^1.3.1",
+		"remix-utils": "^7.6.0",
 		"sonner": "^1.4.41",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
