fix: changed from NEON DB to Turso DB due to reaching compute time

--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
 		"build": "remix vite:build",
 		"dev": "remix vite:dev",
 		"db:generate": "drizzle-kit generate",
-		"db:migrate": "tsx app/lib/migrate.ts",
-		"db:seed": "tsx app/lib/seed.ts",
+		"db:migrate": "pnpm generate && pnpm migrate:push",
+		"db:migrate:push": "pnpm tsx ./app/lib/migrate.ts",
+		"db:drop": "drizzle-kit drop",
 		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
 		"start": "remix-serve ./build/server/index.js",
 		"typecheck": "tsc"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.4.2",
-		"@neondatabase/serverless": "^0.9.3",
+		"@libsql/client": "^0.8.1",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-aspect-ratio": "^1.0.3",
