--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.4.2",
-		"@libsql/client": "^0.8.1",
+		"@libsql/client": "0.5.6",
 		"@radix-ui/react-accordion": "^1.1.2",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
 		"@radix-ui/react-aspect-ratio": "^1.0.3",
