FEAT: Added page for specific project, added images to projects and redesigned project card

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 THEME_SESSION_SECRET="RANDOM STRING"
 GITHUB_TOKEN="GITHUB TOKEN"
-NEON_DATABASE_URL="POSTGRES NEON DATABASE URL"
+TURSO_CONNECTION_URL="TURSO CONNECTION URL"
+TURSO_AUTH_TOKEN="TURSO AUTH TOKEN"
 GITHUB_WEBHOOK_SECRET="GITHUB WEBHOOK SECRET FROM GITHUB APP"
