--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"build": "remix vite:build",
 		"dev": "remix vite:dev",
 		"db:generate": "drizzle-kit generate",
-		"db:migrate": "pnpm generate && pnpm migrate:push",
-		"db:migrate:push": "pnpm tsx ./app/lib/migrate.ts",
+		"db:migrate": "drizzle-kit migrate",
+		"db:migrate:seed": "pnpm db:generate && pnpm tsx ./app/lib/migrate.ts",
 		"db:drop": "drizzle-kit drop",
 		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
 		"start": "remix-serve ./build/server/index.js",
